feat: class Valea now implements Predicate + some small changes